# python_module_08

./: README.md
ex0/: construct.py
ex1/: loading.py  pyproject.toml
ex2/: .env.example  .gitignore  oracle.py
